--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,27 @@
-## You must first activate a Billing Account here: https://platform.openai.com/account/billing/overview
-## Then get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=XXXXXXXX
+### === OPENAI API ===
+# Activate Billing: https://platform.openai.com/account/billing/overview
+# Get API Key: https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
-# In local dev you can get these by running `supabase status`.
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
+### === HUGGING FACE (DeepSeek or Mistral) ===
+# Get from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=hf_XXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+### === PERPLEXITY AI (if access is granted) ===
+# Access via dev partner account or token-based endpoint
+PERPLEXITY_API_KEY=pxy_XXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+### === SUPABASE PROJECT ===
+# Project → Settings → API (https://app.supabase.com/project/_/settings/api)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
-## Follow GitHub Oauth setup steps from Supabase,
-## if you choose not to use Github, set first
-## value to "false"
+### === AUTHENTICATION (Optional GitHub OAuth) ===
+# If not using GitHub Auth, leave below as-is
 NEXT_PUBLIC_AUTH_GITHUB=false
-AUTH_GITHUB_ID=XXXXXXXX
-AUTH_GITHUB_SECRET=XXXXXXXX
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+
+### === VERCEL SETTINGS ===
+# You can leave these out unless you use serverless functions at edge or advanced runtime logic
+NODE_ENV=development 
