--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "nanoid": "latest",
     "next": "15.2.4",
     "next-themes": "latest",
-    "react": "^18.2.0",
+    "react": "^18.2.0",           
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0",       
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "latest",
     "react-intersection-observer": "latest",
@@ -73,11 +73,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22"
-  "@types/react": "^18.2.0",
-  "@types/react-dom": "^18.2.0"
-}
+    "@types/node": "^22",
+    "@types/react": "^18.2.0",     
+    "@types/react-dom": "^18.2.0", 
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
+}
